# future_finance_labs

./: Cargo.toml
attempts/2_1_doesnt_work/: download_data.rs  downloader_actor.rs  lib.rs  main.rs  process_data.rs
attempts/2_2_also_doesnt/: download_data.rs  downloader_actor.rs  lib.rs  main.rs  new_actors.rs  processor_actor.rs
attempts/2_3_tokio_as_good_as_it_gets/: download_data.rs  main.rs  process_data.rs  processor_actor.rs
attempts/2_tokio_actors/: download_data.rs  downloader_actor.rs  main.rs  process_data.rs
helper_stuff/: alice_actors.rs
helper_stuff/telnet-chat-actor-example/src/: accept.rs  client.rs  main.rs  main_loop.rs
originals/: 1_my_original_attempt.rs
src/: downloader_actor.rs  lib.rs  main.rs  processor_actor.rs
