[package]
name = "future_finance_labs"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
yahoo_finance_api = {"version" = "1.0", features = ["blocking"]}
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
rust_decimal = "1.14"
rust_decimal_macros = "1.14"
csv = "1.1.6"
